# Moat-Research

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSTRAINTS.md  FOCUS.md  LANES.md  README.md  RUBRIC.md  SEED_NOTES.md  WISHLIST.md  pyproject.toml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  memory.md  token-ledger.json
.wolf/hooks/: _session.json
briefs/candidates/: 06.470-20260505-msha-mine-safety-enforcement-corpus.md  06.483-20260505-multi-state-insurance-dept-enforcement.md  06.499-20260505-multi-state-attorney-bar-discipline.md  06.608-20260505-epa-echo-enforcement-corpus.md  06.701-20260504-us-transit-gtfsrt-smaller-agencies.md  06.723-20260505-osha-enforcement-inspection-corpus.md  06.799-20260505-hud-fheo-fair-housing-enforcement.md  06.802-20260505-nlrb-unfair-labor-practice-cases.md  06.805-20260505-usda-aphis-animal-welfare-inspections.md  06.892-20260504-multi-state-medical-board-enforcement.md  06.907-20260506-multi-state-pharmacy-board-enforcement.md  06.911-20260505-uspto-patent-claim-citation-corpus.md  06.914-20260506-multi-state-real-estate-commission-enforcement.md  06.997-20260505-wsdot-traffic-cameras.md  07.006-20260505-ferc-elibrary-regulatory-filings.md  07.009-20260504-cslb-ca-contractor-disciplinary-corpus.md  07.060-20260506-multi-state-ag-consumer-protection.md  07.063-20260505-ftc-consumer-antitrust-enforcement-corpus.md  07.138-20260506-adot-az511-cameras.md  07.139-20260505-caltrans-quickmap-cameras.md  07.141-20260506-gdot-ga511-cameras.md  07.216-20260505-txdot-drivetexas-cameras.md  (+10 more)
docs/: wishlist-dismissals.md
mr/: __init__.py  __main__.py
prompts/: discover.md  score.md  wishlist_expand.md
scripts/: politeness_lint.py
signals/: sources.yml
stacks/: moat-research.yml
tests/: conftest.py  test_package.py  test_prompts_content.py
(+138 files in other folders)
