[project]
name = "moat-research"
version = "0.1.0"
description = "Discovery, scoring, and queueing of data-moat opportunities for maximizer"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests as integration (slower, hit the filesystem)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
